Changements textes et images

--- a/twocolumn1 - chalet.html
+++ b/twocolumn1 - chalet.html
@@ -66,10 +66,10 @@
 					<div id="sidebar" class="3u">
 						<section>
 							<header>
-								<h2>Avant retouche</h2>
+								<h2>Photo d'inspiration</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/cheval.jpg" alt=""></a>
-							<p>Image d'un des chevaux avant montage photo.</p>
+							<a href="#" class="image full"><img src="images/reduit_moitier/Chalet-en-bois.jpg" alt=""></a>
+							<p>La photo qui m'as donner l'idée de faire cette modélisation.</p>
 						</section>
 						<section>
 							<header>
@@ -85,10 +85,11 @@
 							<header>
 								<h2>Chalet en bois</h2>
 							</header>
-							<p>Dans le cadre de la découverte de photoshop lors de ma Licence Professionnelle Images et Sons Numériques, on nous a demandé de réaliser un montage photo sur le théme de l'illusion d'optique.</p>
-							<p>Aprés avoir effectuer des recherches pour me faire une idée de ce que je pourrais réaliser comme illusion d'optique, je me suis décidée d'en faire une donnant l'impression qu'il y a plusieurs rangées de colonnes alors qu'en réalité, il n'y en a qu'une. Pour cela j'ai pris des chevaux que j'ai découpé à l'endroit des colonnes pour que l'on ait l'impression que ce dernier passe derrière le pilier. J'ai répété cette opértion plusieurs fois pour donner ce résultat. </p>
+							<p>Alors que je venais de finir mes études en licence profesionnelles, j'ai décider de commencer à faire des projets personnels pour m'entrainer avec les logiciels, et ainsi les maitriser de mieux en mieux.</p>
+							<p>En cherchant quel genre de bâtiment je pourrais effectuer je suis tomber sur des photos de chalet en bois et j'ai décider d'en faire un, l'idée était .</p>
 							<p>Montage photo réalisé avec le logiciel : Adobe Photoshop.</p>
 							<p>Année de réalisation du projet : 2014, durant mes études à Saint-Dié-des-Vosges en LP ISN</p>
+							<a href="#" class="image full"><img src="images/Maison_en_bois2_960x540.jpg" alt=""></a>
 						</section>
 					</div>
 					
