changement du texte

--- a/twocolumn1 - chalet.html
+++ b/twocolumn1 - chalet.html
@@ -75,7 +75,7 @@
 							<header>
 								<h2>Image modélisée</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/Maison_en_bois2_960x540.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/Maison_en_bois2_960x540_moitier.jpg" alt=""></a>
 							<p>Résultat finale aprés retouche avec le logiciel Photoshop.</p>
 						</section>
 					</div>
@@ -86,9 +86,9 @@
 								<h2>Chalet en bois</h2>
 							</header>
 							<p>Alors que je venais de finir mes études en licence profesionnelles, j'ai décider de commencer à faire des projets personnels pour m'entrainer avec les logiciels, et ainsi les maitriser de mieux en mieux.</p>
-							<p>En cherchant quel genre de bâtiment je pourrais effectuer je suis tomber sur des photos de chalet en bois et j'ai décider d'en faire un, l'idée était .</p>
-							<p>Montage photo réalisé avec le logiciel : Adobe Photoshop.</p>
-							<p>Année de réalisation du projet : 2014, durant mes études à Saint-Dié-des-Vosges en LP ISN</p>
+							<p>En cherchant quel genre de bâtiment je pourrais effectuer je suis tomber sur des photos de chalet en bois et j'ai décider d'en faire un, l'idée était d'avoir une petite cabane en bois plus clair sur laquelle à été ajouter un chalet habitable.</p>
+							<p>Modélisation réalisé avec le logiciel : 3Ds Max, moteur de rendu mental ray.</p>
+							<p>Année de réalisation du projet : été 2015</p>
 							<a href="#" class="image full"><img src="images/Maison_en_bois2_960x540.jpg" alt=""></a>
 						</section>
 					</div>
