--- a/twocolumn1 - chalet.html
+++ b/twocolumn1 - chalet.html
@@ -76,7 +76,7 @@
 								<h2>Image modélisée</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/reduit_moitier/Maison_en_bois2_960x540_moitier.jpg" alt=""></a>
-							<p>Résultat finale aprés retouche avec le logiciel Photoshop.</p>
+							<p>Modélisation finale du bâtiment aprés l'aménagement d'intérieur.</p>
 						</section>
 					</div>
 					
