--- a/twocolumn1 - chalet.html
+++ b/twocolumn1 - chalet.html
@@ -110,13 +110,13 @@
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href=" twocolumn1 - illusion.html" class="image full"><img src="images/table-lit.bmp" alt=""></a>
+							<a href=" twocolumn1 - illusion.html" class="image full"><img src="images/reduit_moitier/table-lit_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn1 - salonjaponais.html" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
+							<a href="twocolumn1 - salonjaponais.html" class="image full"><img src="images/reduit_moitier/RenduBlenderJaponaise_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
+							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/reduit_moitier/rendu_maison_DAUPHIN_moitier.jpg" alt=""></a>
 						</section>
 					</div>
 					<a href="Gallerie.html" class="button">Gallerie</a>
