--- a/twocolumn1 - illusion.html
+++ b/twocolumn1 - illusion.html
@@ -68,14 +68,14 @@
 							<header>
 								<h2>Avant retouche</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/cheval.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/cheval_moitier.jpg" alt=""></a>
 							<p>Image d'un des chevaux avant montage photo.</p>
 						</section>
 						<section>
 							<header>
 								<h2>Aprés retouche</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/Photomontage_DAUPHIN_Morgane_moitier.jpg" alt=""></a>
 							<p>Résultat finale aprés retouche avec le logiciel Photoshop.</p>
 						</section>
 					</div>
@@ -89,6 +89,7 @@
 							<p>Aprés avoir effectuer des recherches pour me faire une idée de ce que je pourrais réaliser comme illusion d'optique, je me suis décidée d'en faire une donnant l'impression qu'il y a plusieurs rangées de colonnes alors qu'en réalité, il n'y en a qu'une. Pour cela j'ai pris des chevaux que j'ai découpé à l'endroit des colonnes pour que l'on ait l'impression que ce dernier passe derrière le pilier. J'ai répété cette opértion plusieurs fois pour donner ce résultat. </p>
 							<p>Montage photo réalisé avec le logiciel : Adobe Photoshop.</p>
 							<p>Année de réalisation du projet : 2014, durant mes études à Saint-Dié-des-Vosges en LP ISN</p>
+							<a href="#" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
 						</section>
 					</div>
 					
@@ -109,13 +110,13 @@
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href=" twocolumn1 - illusion.html" class="image full"><img src="images/table-lit.bmp" alt=""></a>
+							<a href=" twocolumn1 - illusion.html" class="image full"><img src="images/reduit_moitier/table-lit_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn1 - salonjaponais.html" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
+							<a href="twocolumn1 - salonjaponais.html" class="image full"><img src="images/reduit_moitier/RenduBlenderJaponaise_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
+							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/reduit_moitier/rendu_maison_DAUPHIN_moitier.jpg" alt=""></a>
 						</section>
 					</div>
 					<a href="Gallerie.html" class="button">Gallerie</a>
