--- a/Gallerie.html
+++ b/Gallerie.html
@@ -70,25 +70,36 @@
 						</header>
 					<div class="row">
 						<section class="4u">
-							<a href="twocolumn2 - residence.html" class="image full"><img src="images/table-lit.bmp" alt=""></a>
+							<a href="twocolumn2 - residence.html" class="image full"><img src="images/reduit_moitier/table-lit_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn1 - salonjaponais.html" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
+							<a href="twocolumn1 - salonjaponais.html" class="image full"><img src="images/reduit_moitier/RenduBlenderJaponaise_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
+							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/reduit_moitier/Photomontage_DAUPHIN_Morgane_moitier.jpg" alt=""></a>
 						</section>
 					</div>
 					</section>
 					<div class="row">
 						<section class="4u">
-							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
+							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/reduit_moitier/rendu_maison_DAUPHIN_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn2 - robotmarcheur.html" class="image full"><img src="images/20140616_090915.jpg" alt=""></a>
+							<a href="twocolumn2 - robotmarcheur.html" class="image full"><img src="images/reduit_moitier/20140616_090915_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn2 - salonblender.html" class="image full"><img src="images/Scene_final_DAUPHIN_Morgane.png" alt=""></a>
+							<a href="twocolumn2 - salonblender.html" class="image full"><img src="images/reduit_moitier/Scene_final_DAUPHIN_Morgane_moitier.jpg" alt=""></a>
+						</section>
+					</div>
+						<div class="row">
+						<section class="4u">
+							<a href="twocolumn1 - chalet.html" class="image full"><img src="images/reduit_moitier/Maison_en_bois2_960x540_moitier.jpg" alt=""></a>
+						</section>
+						<section class="4u">
+							<a href="#" class="image full"><img src="images/" alt=""></a>
+						</section>
+						<section class="4u">
+							<a href="#" class="image full"><img src="images/" alt=""></a>
 						</section>
 					</div>
 				</div>
