--- a/Gallerie.html
+++ b/Gallerie.html
@@ -91,6 +91,7 @@
 							<a href="twocolumn2 - salonblender.html" class="image full"><img src="images/reduit_moitier/Scene_final_DAUPHIN_Morgane_moitier.jpg" alt=""></a>
 						</section>
 					</div>
+					<section>
 					<div class="row">
 						<section class="4u">
 							<a href="twocolumn1 - chalet.html" class="image full"><img src="images/reduit_moitier/Maison_en_bois2_960x540_moitier.jpg" alt=""></a>
@@ -102,6 +103,7 @@
 							<a href="#" class="image full"><img src="images/" alt=""></a>
 						</section>
 					</div>
+					</section>
 				</div>
 			</div>
 			<!-- /Welcome -->
