Changements des images

--- a/twocolumn2 - salonblender.html
+++ b/twocolumn2 - salonblender.html
@@ -72,6 +72,7 @@
 							<p>Malheureusement, ce moteur de rendu demandait plus de ressources à mon ordinateur qui n'était pas assez puissant pour faire une image nette de la scène et on peut donc voir beaucoup de bruit sur l'image finale. Mais malgré celà j'ai beaucoup appris sur ce moteur de rendu spécifique, comme par exemple UV mapping, j'ai aussi pu faire des tests sur les lumières de la scène ce qui est un domaine trés difficile à rendre réaliste.</p>
 							<p><Strong>Logiciels utilisés</Strong> : Blender, avec le moteur de rendu Cycle.</p>
 							<p><Strong>Année de réalisation</Strong> : 2014, durant mes études à Saint-Dié-des-Vosges en LP ISN.</p>
+							<a href="#" class="image full"><img src="images/reduit_moitier/Scene_final_DAUPHIN_Morgane_moitier.jpg" alt=""></a>
 						</section>
 					</div>
 					<div id="sidebar" class="3u">
@@ -79,14 +80,14 @@
 							<header>
 								<h2>Lumière choisie.</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/Scene_final_DAUPHIN_Morgane.png" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/Scene_final_DAUPHIN_Morgane_moitier.jpg" alt=""></a>
 							<p>Voici la couleur et le mode d'illumination que j'ai choisi.</p>
 						</section>
 						<section>
 							<header>
 								<h2>Test de lumière.</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/Scene salon blender cycle lum1.png" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/Scene salon blender cycle lum1_moitier.jpg" alt=""></a>
 							<p>Exemple d'un des tests que j'ai réalisé avec les lumières.</p>
 						</section>
 					</div>
@@ -107,13 +108,13 @@
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
+							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/reduit_moitier/Photomontage_DAUPHIN_Morgane_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
+							<a href="twocolumn1 - salonjaponais.html" class="image full"><img src="images/reduit_moitier/RenduBlenderJaponaise_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
+							<a href="twocolumn1 - chalet.html" class="image full"><img src="images/reduit_moitier/Maison_en_bois2_960x540_moitier.jpg" alt=""></a>
 						</section>
 					</div>
 					<a href="Gallerie.html" class="button">Gallerie</a>
