--- a/twocolumn2 - salonblender.html
+++ b/twocolumn2 - salonblender.html
@@ -72,7 +72,7 @@
 							<p>Malheureusement, ce moteur de rendu demandait plus de ressources à mon ordinateur qui n'était pas assez puissant pour faire une image nette de la scène et on peut donc voir beaucoup de bruit sur l'image finale. Mais malgré celà j'ai beaucoup appris sur ce moteur de rendu spécifique, comme par exemple UV mapping, j'ai aussi pu faire des tests sur les lumières de la scène ce qui est un domaine trés difficile à rendre réaliste.</p>
 							<p><Strong>Logiciels utilisés</Strong> : Blender, avec le moteur de rendu Cycle.</p>
 							<p><Strong>Année de réalisation</Strong> : 2014, durant mes études à Saint-Dié-des-Vosges en LP ISN.</p>
-							<a href="#" class="image full"><img src="images/reduit_moitier/Scene_final_DAUPHIN_Morgane_moitier.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/Scene_final_DAUPHIN_Morgane.png" alt=""></a>
 						</section>
 					</div>
 					<div id="sidebar" class="3u">
