changement taille des images

--- a/twocolumn2.html
+++ b/twocolumn2.html
@@ -84,14 +84,14 @@
 							<header>
 								<h2>Modélisation</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/Exemple_modélisation.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/Exemple_modélisation_moitier.jpg" alt=""></a>
 							<p>La modélisation tridimensionnelle est l'étape en infographie tridimensionnelle qui consiste à créer, dans un logiciel de modélisation 3D, un objet en trois dimensions, par ajout, soustraction et modifications de ses constituants. (source : Wikipédia)</p>
 						</section>
 						<section>
 							<header>
 								<h2>Infographie</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/Exemple_Infographie.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/Exemple_Infographie_moitier.jpg" alt=""></a>
 							<p>L'infographie est le domaine de la création d'images numériques assistée par ordinateur. Ce qui comprend : retouche photographique, mise en couleur de bandes dessinées, habillage de perspectives architecturales, etc... (source : Wikipédia)</p>
 						</section>
 					</div>
@@ -112,13 +112,13 @@
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
+							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/reduit_moitier/rendu_maison_DAUPHIN_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
+							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/reduit_moitier/Photomontage_DAUPHIN_Morgane_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn2 - residence.html" class="image full"><img src="images/AFAEDAM_perspective.bmp" alt=""></a>
+							<a href="twocolumn2 - residence.html" class="image full"><img src="images/reduit_moitier/AFAEDAM_perspective_moitier.jpg" alt=""></a>
 						</section>
 					</div>
 					<a href="Gallerie.html" class="button">Gallerie</a>
