changements des images

--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -68,7 +68,7 @@
 							<header>
 								<h2>Moi</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/ma_photo1.png" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/ma_photo1_moitier.jpg" alt=""></a>
 							<p>Naissance : 07/05/1994.</p>
 							<p>En possession du permis B et d'une voiture.</p>
 						</section>
@@ -76,7 +76,7 @@
 							<header>
 								<h2>Me contacter</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/Mail-icone.png" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/Mail-icone_moitier.jpg" alt=""></a>
 							<p>Mail : morgane.dauphin@hotmail.com</p>
 							<p>Potable : 06 68 08 09 82</p>
 						</section>
@@ -113,13 +113,13 @@
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href="twocolumn2 - residence.html" class="image full"><img src="images/table-lit.bmp" alt=""></a>
+							<a href="twocolumn2 - residence.html" class="image full"><img src="images/reduit_moitier/table-lit_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
+							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/reduit_moitier/Photomontage_DAUPHIN_Morgane_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn2 - residence.html" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
+							<a href="twocolumn2 - residence.html" class="image full"><img src="images/reduit_moitier/rendu_maison_DAUPHIN_moitier.jpg" alt=""></a>
 						</section>
 					</div>
 					<a href="Gallerie.html" class="button">Gallerie</a>
