--- a/onecolumn.html
+++ b/onecolumn.html
@@ -92,13 +92,13 @@
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href="twocolumn2 - robotmarcheur.html" class="image full"><img src="images/20140616_090915.jpg" alt=""></a>
+							<a href="twocolumn2 - robotmarcheur.html" class="image full"><img src="images/reduit_moitier/20140616_090915_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
+							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/reduit_moitier/Photomontage_DAUPHIN_Morgane_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn2 - residence.html" class="image full"><img src="images/table-lit.bmp" alt=""></a>
+							<a href="twocolumn2 - residence.html" class="image full"><img src="images/reduit_moitier/table-lit_moitier.jpg" alt=""></a>
 						</section>
 					</div>
 					<a href="Gallerie.html" class="button">Gallerie</a>
