changement taille images

--- a/twocolumn2 - robotmarcheur.html
+++ b/twocolumn2 - robotmarcheur.html
@@ -82,14 +82,14 @@
 							<header>
 								<h2>Robot modélisé</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/robot_marcheur_catia.png" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/robot_marcheur_catia_moitier.jpg" alt=""></a>
 							<p>Voici ce à quoi ressemblait notre robot sur notre logiciel de modélisation.</p>
 						</section>
 						<section>
 							<header>
 								<h2>Robot fini</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/20140616_090915.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/20140616_090915_moitier.jpg" alt=""></a>
 							<p>Voici notre robot une fois fini.</p>
 						</section>
 					</div>
@@ -110,13 +110,13 @@
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
+							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/reduit_moitier/Photomontage_DAUPHIN_Morgane_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn1 - salonjaponais.html" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
+							<a href="twocolumn1 - salonjaponais.html" class="image full"><img src="images/reduit_moitier/RenduBlenderJaponaise_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
+							<a href="twocolumn1 - chalet.html" class="image full"><img src="images/reduit_moitier/Maison_en_bois2_960x540_moitier.jpg" alt=""></a>
 						</section>
 					</div>
 					<a href="Gallerie.html" class="button">Gallerie</a>
