--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -119,7 +119,7 @@
 							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/reduit_moitier/Photomontage_DAUPHIN_Morgane_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn2 - residence.html" class="image full"><img src="images/reduit_moitier/rendu_maison_DAUPHIN_moitier.jpg" alt=""></a>
+							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/reduit_moitier/rendu_maison_DAUPHIN_moitier.jpg" alt=""></a>
 						</section>
 					</div>
 					<a href="Gallerie.html" class="button">Gallerie</a>
