--- a/twocolumn1 - salonjaponais.html
+++ b/twocolumn1 - salonjaponais.html
@@ -68,7 +68,7 @@
 							<header>
 								<h2>Image finale</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/RenduBlenderJaponaise_moitier.jpg" alt=""></a>
 							<p>Rendu Blender de la scène modéliser.</p>
 						</section>
 						<section>
@@ -111,13 +111,13 @@
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/table-lit.bmp" alt=""></a>
+							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/reduit_moitier/table-lit_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn2 - robotmarcheur.html" class="image full"><img src="images/robot_marcheur_catia.png" alt=""></a>
+							<a href="twocolumn2 - robotmarcheur.html" class="image full"><img src="images/reduit_moitier/robot_marcheur_catia_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
+							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/reduit_moitier/rendu_maison_DAUPHIN_moitier.jpg" alt=""></a>
 						</section>
 					</div>
 					<a href="Gallerie.html" class="button">Gallerie</a>
