Changement des taille d'images

--- a/twocolumn1 - compositing.html
+++ b/twocolumn1 - compositing.html
@@ -68,14 +68,14 @@
 							<header>
 								<h2>Avant</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/compositing avant.png" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/compositing avant_moitier.jpg" alt=""></a>
 							<p>Image fournie pour la modification.</p>
 						</section>
 						<section>
 							<header>
 								<h2>Aprés</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/rendu_maison_DAUPHIN_moitier.jpg" alt=""></a>
 							<p>Modification de l'image.</p>
 						</section>
 					</div>
@@ -109,13 +109,13 @@
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href=" twocolumn2 - robotmarcheur.html" class="image full"><img src="images/20140616_090915.jpg" alt=""></a>
+							<a href=" twocolumn2 - robotmarcheur.html" class="image full"><img src="images/reduit_moitier/20140616_090915_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
+							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/reduit_moitier/Photomontage_DAUPHIN_Morgane_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn2 - residence.html" class="image full"><img src="images/AFAEDAM_perspective.bmp" alt=""></a>
+							<a href="twocolumn2 - residence.html" class="image full"><img src="images/reduit_moitier/AFAEDAM_perspective_moitier.jpg" alt=""></a>
 						</section>
 					</div>
 					<a href="Gallerie.html" class="button">Gallerie</a>
