Changement de lien

--- a/twocolumn1 - chalet.html
+++ b/twocolumn1 - chalet.html
@@ -110,7 +110,7 @@
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href=" twocolumn1 - illusion.html" class="image full"><img src="images/reduit_moitier/table-lit_moitier.jpg" alt=""></a>
+							<a href="twocolumn2 - residence.html" class="image full"><img src="images/reduit_moitier/table-lit_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
 							<a href="twocolumn1 - salonjaponais.html" class="image full"><img src="images/reduit_moitier/RenduBlenderJaponaise_moitier.jpg" alt=""></a>
