ajout d'image en gros

--- a/twocolumn1 - compositing.html
+++ b/twocolumn1 - compositing.html
@@ -89,6 +89,7 @@
 							<p>Voici donc le résultat aprés avoir ajouté ici la végétation, modifié une fenêtre, ajouté des personnages avec leurs ombres et pour compléter le tout j'ai ajouté un ciel concordant avec les ombres présentes sur le bâtiment.</p>
 							<p>Cette image a été modifiée avec le logiciel : Adobe Photoshop.</p>
 							<p>Année de réalisation de ce projet : 2014, lors de mes études à Saint-Dié-des-Vosges en LP ISN.</p>
+							<a href="#" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
 						</section>
 					</div>
 					
