Rectification du lien

--- a/twocolumn1 - salonjaponais.html
+++ b/twocolumn1 - salonjaponais.html
@@ -111,7 +111,7 @@
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/reduit_moitier/table-lit_moitier.jpg" alt=""></a>
+							<a href="twocolumn1 - residence.html" class="image full"><img src="images/reduit_moitier/table-lit_moitier.jpg" alt=""></a>
 						</section>
 						<section class="4u">
 							<a href="twocolumn2 - robotmarcheur.html" class="image full"><img src="images/reduit_moitier/robot_marcheur_catia_moitier.jpg" alt=""></a>
