--- a/Gallerie.html
+++ b/Gallerie.html
@@ -66,7 +66,7 @@
 				<div class="row">
 					<section>
 						<header>
-							<h2>Gallerie</h2>
+							<h2>Galerie</h2>
 						</header>
 					<div class="row">
 						<section class="4u">
