--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<section>
 					<header>
 						<h2>Mes dernières réalisations</h2>
-						<span class="byline">Une gallerie d'images de toutes mes réalisations jusqu'à ce jour.</span>
+						<span class="byline">Une galerie d'images de toutes mes réalisations jusqu'à ce jour.</span>
 					</header>
 					<div class="row">
 						<section class="4u">
@@ -134,7 +134,7 @@
 							<a href="twocolumn2 - salonblender.html" class="image full"><img src="images/reduit_moitier/Scene_final_DAUPHIN_Morgane_moitier.jpg" alt=""></a>
 						</section>
 					</div>
-					<a href="Gallerie.html" class="button">Gallerie</a>
+					<a href="Gallerie.html" class="button">Galerie</a>
 				</section>
 			</div>
 		</div>
