--- a/twocolumn1 - chalet.html
+++ b/twocolumn1 - chalet.html
@@ -106,7 +106,7 @@
 				<section>
 					<header>
 						<h2>Mes dernières réalisations</h2>
-						<span class="byline">Une gallerie d'images de toutes mes réalisations jusqu'à ce jour.</span>
+						<span class="byline">Une galerie d'images de toutes mes réalisations jusqu'à ce jour.</span>
 					</header>
 					<div class="row">
 						<section class="4u">
@@ -119,7 +119,7 @@
 							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/reduit_moitier/rendu_maison_DAUPHIN_moitier.jpg" alt=""></a>
 						</section>
 					</div>
-					<a href="Gallerie.html" class="button">Gallerie</a>
+					<a href="Gallerie.html" class="button">Galerie</a>
 				</section>
 			</div>
 		</div>
