--- a/Gallerie.html
+++ b/Gallerie.html
@@ -117,7 +117,7 @@
 				<section>
 					<header>
 						<h2>Mes dernières réalisations</h2>
-						<span class="byline">Une gallerie d'images de toutes mes réalisations jusqu'à ce jour.</span>
+						<span class="byline">Une galerie d'images de toutes mes réalisations jusqu'à ce jour.</span>
 					</header>
 					<div class="row">
 						
