complément de phrase

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<p>Je suis passionnée par l'infographie et la modélisation 3D car cela peut me permettre de réaliser tout ce que j'imagine.</p>
 						<p>J'ai créé ce site afin de présenter un <strong>portefolio</strong> de mes projets dans le domaine du design mais également dans le domaine de l'industrie. Il propose aussi une présentation de mon parcours et de mes compétences acquises au cours de mes études et de mes créations personnelles. Ce site montre ainsi tout mes réalisations depuis mes débuts, on peut y remarquer mon évolution dans le domaine de l'infographie et de la modélisation 3D.</p>
 						<p>Bien entendu, je veux encore développer mes compétences artistiques pour obtenir des résultats de plus en plus proches, soit de la demande d'un commanditaire, soit en corrélation avec mon imaginaire.</p>
-						<p><strong>Visiter la Galerie pour voir mes projets (disponible en bas de chaque page) ou regarder les derniers articles sorti ci-dessous.</strong></p>
+						<p><strong>Visiter la Galerie pour voir mes projets (aussi disponible en bas de chaque page) ou regarder les derniers articles sorti ci-dessous.</strong></p>
 						<a href="Gallerie.html" class="button">Galerie</a>
 					</section>
 				</div>
