--- a/twocolumn1 - chalet.html
+++ b/twocolumn1 - chalet.html
@@ -69,7 +69,7 @@
 								<h2>Photo d'inspiration</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/reduit_moitier/Chalet-en-bois.jpg" alt=""></a>
-							<p>La photo qui m'as donner l'idée de faire cette modélisation.</p>
+							<p>La photo qui m'a donné l'idée de faire cette modélisation.</p>
 						</section>
 						<section>
 							<header>
@@ -85,9 +85,9 @@
 							<header>
 								<h2>Chalet en bois</h2>
 							</header>
-							<p>Alors que je venais de finir mes études en licence profesionnelles, j'ai décider de commencer à faire des projets personnels pour m'entrainer avec les logiciels, et ainsi les maitriser de mieux en mieux.</p>
-							<p>En cherchant quel genre de bâtiment je pourrais effectuer je suis tomber sur des photos de chalet en bois et j'ai décider d'en faire un, l'idée était d'avoir une petite cabane en bois plus clair sur laquelle à été ajouter un chalet habitable.</p>
-							<p>Modélisation réalisé avec le logiciel : 3Ds Max, moteur de rendu mental ray.</p>
+							<p>Alors que je venais de finir mes études en licence profesionnelles, j'ai décidé de commencer à faire des projets personnels pour m'entrainer avec les logiciels, et ainsi les maitriser de mieux en mieux.</p>
+							<p>En cherchant quel genre de bâtiment je pourrais effectuer je suis tombée sur des photos de chalets en bois et j'ai décidé d'en faire un, l'idée était d'avoir une petite cabane en bois plus claire sur laquelle a été ajouté un chalet habitable.</p>
+							<p>Modélisation réalisée avec le logiciel : 3Ds Max, moteur de rendu mental ray.</p>
 							<p>Année de réalisation du projet : été 2015</p>
 							<a href="#" class="image full"><img src="images/Maison_en_bois2_960x540.jpg" alt=""></a>
 						</section>
