ajout du robot marcheur

--- a/onecolumn.html
+++ b/onecolumn.html
@@ -68,12 +68,14 @@
 						<header>
 							<h2>Mes expériences professionnelles</h2>
 						</header>
-							<p>2015 : Stage de 14 semaines réalisé dans le cadre de ma Licence Professionnelle Images et Sons Numériques. J'ai donc effectué le mien dans un cabinet d'architecture et de maîtrise d'ouvrage OMHOVER REALISATIONS. Mon sujet de stage était de réaliser une vidéo d'une résidence de 40 studios modélisés moi même à partir des plans fournis par l'architecte.</p>
-							<p>2014 - 2015 : Projet tutoré réalisé sur une durée de 4 mois pendant ma Licence Professionnelle Images et Sons Numériques. Ce projet consistait à réaliser une vidéo ludique sur les mines d'argent du XVI°siècle et leur exploitation avec les techniques de l'époque. Ce projet reprennait une vidéo déjà existante réalisée par les étudiants des années précédentes où il fallait apporter des modifications suivant les demandes de notre commanditaire.</p>
+							<p>2015 : <strong>Modélisatrice et animatrice 3D</strong> Stage de 14 semaines réalisé dans le cadre de ma Licence Professionnelle Images et Sons Numériques. J'ai donc effectué le mien dans un cabinet d'architecture et de maîtrise d'ouvrage OMHOVER REALISATIONS. Mon sujet de stage était de réaliser une vidéo d'une résidence de 40 studios modélisés moi même à partir des plans fournis par l'architecte.</p>
+							<p>2014 - 2015 : <strong>Modélisatrice 3D et Montage vidéo</strong> Projet tutoré réalisé sur une durée de 4 mois pendant ma Licence Professionnelle Images et Sons Numériques. Ce projet consistait à réaliser une vidéo ludique sur les mines d'argent du XVI°siècle et leur exploitation avec les techniques de l'époque. Ce projet reprennait une vidéo déjà existante réalisée par les étudiants des années précédentes où il fallait apporter des modifications suivant les demandes de notre commanditaire.</p>
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/91Zl0zEeixg" frameborder="0" allowfullscreen></iframe>
 							<p> </p>
 							<p>2014 : job d'été d'une durée de 3 semaines dans une assurance luxembourgeoise <Strong>Foyer assurance</Strong>. J'étais dans le service de sinistre automobile et mon travail était de trier les constats amiables et d'envoyer les affaires aux différents opérateurs téléphoniques.</p>
-							<p>2013 : Stage de 5 semaines réalisé dans le cadre de mon BTS Conception Industrialisée Micro-mecanique. Mon stage a été effectué dans l'entreprise PSA Peugeot Citroën, dans l'usine de moteur située à Trémery. Mon projet était alors de chercher les problèmes liés à une machine de calcul ultra précise sur les culasses de moteurs.</p>
+							<p>2014 : <strong>Usinage et Bureau d'étude</strong></p> réalisation d'un robot marcheur de A à Z. Idée, dessins cinématique, dessins de définition, modélisation 3D, usinage de pièces et injection dans un moule.
+							<p>2013 : <strong>Bureau d'étude</strong> Stage de 5 semaines réalisé dans le cadre de mon BTS Conception Industrialisée Micro-mecanique. Mon stage a été effectué dans l'entreprise PSA Peugeot Citroën, dans l'usine de moteur située à Trémery. Mon projet était alors de chercher les problèmes liés à une machine de calcul ultra précise sur les culasses de moteurs.</p>
+							
 					</section>
 				</div>
 			</div>
