Correction erreur code

--- a/onecolumn.html
+++ b/onecolumn.html
@@ -73,7 +73,7 @@
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/91Zl0zEeixg" frameborder="0" allowfullscreen></iframe>
 							<p> </p>
 							<p>2014 : job d'été d'une durée de 3 semaines dans une assurance luxembourgeoise <Strong>Foyer assurance</Strong>. J'étais dans le service de sinistre automobile et mon travail était de trier les constats amiables et d'envoyer les affaires aux différents opérateurs téléphoniques.</p>
-							<p>2014 : <strong>Usinage et Bureau d'étude</strong></p> réalisation d'un robot marcheur de A à Z. Idée, dessins cinématique, dessins de définition, modélisation 3D, usinage de pièces et injection dans un moule.
+							<p>2014 : <strong>Usinage et Bureau d'étude</strong> réalisation d'un robot marcheur de A à Z. Idée, dessins cinématique, dessins de définition, modélisation 3D, usinage de pièces et injection dans un moule.</p>
 							<p>2013 : <strong>Bureau d'étude</strong> Stage de 5 semaines réalisé dans le cadre de mon BTS Conception Industrialisée Micro-mecanique. Mon stage a été effectué dans l'entreprise PSA Peugeot Citroën, dans l'usine de moteur située à Trémery. Mon projet était alors de chercher les problèmes liés à une machine de calcul ultra précise sur les culasses de moteurs.</p>
 							
 					</section>
