--- a/twocolumn1 - chalet.html
+++ b/twocolumn1 - chalet.html
@@ -85,7 +85,7 @@
 							<header>
 								<h2>Chalet en bois</h2>
 							</header>
-							<p>Alors que je venais de finir mes études en licence profesionnelles, j'ai décidé de commencer à faire des projets personnels pour m'entrainer avec les logiciels, et ainsi les maitriser de mieux en mieux.</p>
+							<p>Alors que je venais de finir mes études en licence profesionnelle, j'ai décidé de commencer à faire des projets personnels pour m'entrainer avec les logiciels, et ainsi les maitriser de mieux en mieux.</p>
 							<p>En cherchant quel genre de bâtiment je pourrais effectuer je suis tombée sur des photos de chalets en bois et j'ai décidé d'en faire un, l'idée était d'avoir une petite cabane en bois plus claire sur laquelle a été ajouté un chalet habitable.</p>
 							<p>Modélisation réalisée avec le logiciel : 3Ds Max, moteur de rendu mental ray.</p>
 							<p>Année de réalisation du projet : été 2015</p>
