--- a/twocolumn1 - illusion.html
+++ b/twocolumn1 - illusion.html
@@ -76,7 +76,7 @@
 								<h2>Aprés retouche</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/reduit_moitier/Photomontage_DAUPHIN_Morgane_moitier.jpg" alt=""></a>
-							<p>Résultat finale aprés retouche avec le logiciel Photoshop.</p>
+							<p>Résultat final aprés retouche avec le logiciel Photoshop.</p>
 						</section>
 					</div>
 					
@@ -86,7 +86,7 @@
 								<h2>Illusion d'optique</h2>
 							</header>
 							<p>Dans le cadre de la découverte de photoshop lors de ma Licence Professionnelle Images et Sons Numériques, on nous a demandé de réaliser un montage photo sur le théme de l'illusion d'optique.</p>
-							<p>Aprés avoir effectuer des recherches pour me faire une idée de ce que je pourrais réaliser comme illusion d'optique, je me suis décidée d'en faire une donnant l'impression qu'il y a plusieurs rangées de colonnes alors qu'en réalité, il n'y en a qu'une. Pour cela j'ai pris des chevaux que j'ai découpé à l'endroit des colonnes pour que l'on ait l'impression que ce dernier passe derrière le pilier. J'ai répété cette opértion plusieurs fois pour donner ce résultat. </p>
+							<p>Aprés avoir effectuer des recherches pour me faire une idée de ce que je pourrais réaliser comme illusion d'optique, je me suis décidée d'en faire une donnant l'impression qu'il y a plusieurs rangées de colonnes alors qu'en réalité, il n'y en a qu'une. Pour cela j'ai pris des chevaux que j'ai découpé à l'endroit des colonnes pour que l'on ait l'impression que ce dernier passe derrière le pilier. J'ai répété cette opération plusieurs fois pour donner ce résultat. </p>
 							<p>Montage photo réalisé avec le logiciel : Adobe Photoshop.</p>
 							<p>Année de réalisation du projet : 2014, durant mes études à Saint-Dié-des-Vosges en LP ISN</p>
 							<a href="#" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
