--- a/twocolumn2 - grand piano.html
+++ b/twocolumn2 - grand piano.html
@@ -66,31 +66,30 @@
 					<div id="content" class="9u skel-cell-important">
 						<section>
 							<header>
-								<h2>Résidence de 40 Studios</h2>
+								<h2>Grand piano</h2>
 							</header>
-							<p>Lors de ma licence professionnelle, je devais effectuer un stage en entreprise. Je l'ai réalisé dans l'entreprise <a>OMHOVER REALISATIONS</a>. Mon projet était de réaliser un film de présentation d'un bâtiment qui était encore alors en construction. C'est donc à partir de plans fournis par l'architecte que j'ai modélisé entièrement l'intérieur du bâtiment avec l'entrée principale, son forum, le restaurant intérieur et la terrasse extérieure.</p>
-							<p>Dans un deuxième temps j'ai également modélisé l'intérieur d'un des 40 studios que compte cette résidence pour personnes handicapées vieillissantes. Je n'ai  réalisé que l'intérieur d'un seul studio qui sera montré séparément par une coupure dans la vidéo du bâtiment extérieur.</p>
-							<p>Lors de la réalisation de ces modélisations j'ai scrupuleusement respecté les plans qui m'étaient fournis. Mais le choix du style et des formes des meubles ont été de ma propre interprétation aprés validation de mon commanditaire.</p>
-							<p><Strong>Logiciels utilisés</Strong> : 3Ds Max Studio, Adobe Photoshop, Adobe Premiere.</p>
-							<p><Strong>Sites utilisés pour les textures</Strong> : CgTexture, CgSkies</p>
-							<p><Strong>Année de réalisation</Strong> : 2015, durant un stage dans un cabinet d'achitecte.</p>
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/hjqWYD0K7oQ" frameborder="0" allowfullscreen></iframe>
-						</section>
+							<p>En écoutant une musique avec du piano j'ai eu l'idée de modéliser un piano  à queue.</p>
+							
+							<p>Lors de la modélisation j'ai rencontrer quelques problèmes pour la modélisation de l'intérieur d'un paino, de ce fais celui-ci manque de réalisme. Cependant c'est un projet qui m'as permis de crée un objets qui pourra être réutiliser lors d'aménagement d'intérieur de bâtiments.</p>
+							<p><Strong>Logiciels utilisés</Strong> : 3Ds Max Studio.</p>
+							<p><Strong>Année de réalisation</Strong> : automne 2015.</p>
+							<a href="#" class="image full"><img src="images/Grand piano2.jpg" alt=""></a>
+							
 					</div>
 					<div id="sidebar" class="3u">
 						<section>
 							<header>
-								<h2>Extérieur du bâtiment</h2>
+								<h2>Image sur internet</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/reduit_moitier/Vue exterieur Zoom0600_moitier.jpg" alt=""></a>
-							<p>Vue en mode extérieur du bâtiment. Extrait de la vidéo.</p>
+							<a href="#" class="image full"><img src="images/reduit_moitier/KEM-KC151-GRAND-PE.jpg" alt=""></a>
+							<p>Image d'un grand piano trouver sur internet dont je me suis inspirer.</p>
 						</section>
 						<section>
 							<header>
-								<h2>Intérieur d'un studio</h2>
+								<h2>piano modéliser</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/reduit_moitier/table-lit_moitier.jpg" alt=""></a>
-							<p>Extrait de la vidéo sur l'intérieur du studio ou l'ont peut voir le lit et la table.</p>
+							<a href="#" class="image full"><img src="images/reduit_moitier/Grand piano blanc.jpg" alt=""></a>
+							<p>Modélisation du piano.</p>
 						</section>
 					</div>
 				</div>
