article grand piano

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
 					</section>
 					<section class="3u">
 						<header>
-							<h2>Illusion d'optique</h2>
+							<h2>Grand Piano</h2>
 						</header>
-						<a href="twocolumn1 - illusion.html" class="image full"><img src="images/reduit_moitier/Photomontage_DAUPHIN_Morgane_moitier.jpg" alt=""></a>
-						<p>Réalisation d'un montage créant un effet d'optique.</p>
-						<a href="twocolumn1 - illusion.html" class="button">En savoir plus...</a>
+						<a href="twocolumn1 - grand piano.html" class="image full"><img src="images/reduit_moitier/Grand piano2.jpg" alt=""></a>
+						<p>Modélisation d'un piano à queue en temps qu'objets réutilisable pour les aménagements d'intérieurs.</p>
+						<a href="twocolumn1 - grand piano.html" class="button">En savoir plus...</a>
 					</section>
 					<section class="3u">
 						<header>
