--- a/Gallerie.html
+++ b/Gallerie.html
@@ -97,7 +97,7 @@
 							<a href="twocolumn1 - chalet.html" class="image full"><img src="images/Maison_en_bois2_960x540.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/" alt=""></a>
+							<a href="twocolumn2 - grand piano.html" class="image full"><img src="images/reduit_moitier/Grand piano2.jpg" alt=""></a>
 						</section>
 						<section class="4u">
 							<a href="#" class="image full"><img src="images/" alt=""></a>
