changement des images

--- a/twocolumn2 - grand piano.html
+++ b/twocolumn2 - grand piano.html
@@ -73,7 +73,7 @@
 							<p>Lors de la modélisation j'ai rencontrer quelques problèmes pour la modélisation de l'intérieur d'un paino, de ce fais celui-ci manque de réalisme. Cependant c'est un projet qui m'as permis de crée un objets qui pourra être réutiliser lors d'aménagement d'intérieur de bâtiments.</p>
 							<p><Strong>Logiciels utilisés</Strong> : 3Ds Max Studio.</p>
 							<p><Strong>Année de réalisation</Strong> : automne 2015.</p>
-							<a href="#" class="image full"><img src="images/Grand piano2.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/Grand piano3.jpg" alt=""></a>
 							
 					</div>
 					<div id="sidebar" class="3u">
@@ -88,7 +88,7 @@
 							<header>
 								<h2>piano modéliser</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/reduit_moitier/Grand piano blanc.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/Grand piano2.jpg" alt=""></a>
 							<p>Modélisation du piano.</p>
 						</section>
 					</div>
