ajout article abstrait

--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
 					</section>
 					<section class="3u">
 						<header>
-							<h2>Scène Japonaise</h2>
+							<h2>Scène Abstraite</h2>
 						</header>
-						<a href="twocolumn1 - salonjaponais.html" class="image full"><img src="images/reduit_moitier/RenduBlenderJaponaise_moitier.jpg" alt=""></a>
-						<p>Modélisation d'une scène prenant place dans un salon de style japonais donnant sur le jardin de nuit..</p>
-						<a href="twocolumn1 - salonjaponais.html" class="button">En savoir plus...</a>
+						<a href="onecolumn - abstrait.html" class="image full"><img src="images/reduit_moitier/abstrait tori reduit_moitier.jpg" alt=""></a>
+						<p>Scène abstraite avec un thème sur le japon.</p>
+						<a href="onecolumn - abstrait.html" class="button">En savoir plus...</a>
 					</section>
 					<section class="3u">
 						<header>
