Ajout page abstrait

--- a/Gallerie.html
+++ b/Gallerie.html
@@ -100,7 +100,7 @@
 							<a href="twocolumn2 - grand piano.html" class="image full"><img src="images/reduit_moitier/Grand piano2.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/" alt=""></a>
+							<a href="onecolumn - abstrait.html" class="image full"><img src="images/reduit_moitier/abstrait tori reduit_moitier.jpg" alt=""></a>
 						</section>
 					</div>
 					</section>
