Lien page auberge

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
 				<div class="row">
 					<section class="3u">
 						<header>
-							<h2>Résidence de 40 studios</h2>
+							<h2>Salle d'auberge japonaise</h2>
 						</header>
-						<a href="twocolumn2 - residence.html" class="image full"><img src="images/reduit_moitier/AFAEDAM_perspective_moitier.jpg" alt=""></a>
+						<a href="twocolumn1 - salle auberge.html" class="image full"><img src="images/reduit_moitier/salle auberge.jpg" alt=""></a>
 						<p>Visite virtuelle, sous forme d'une vidéo, d'un bâtiment de 40 studios modélisés à partir des plans d'architecte.</p>
-						<a href="twocolumn2 - residence.html" class="button">En savoir plus...</a>
+						<a href="twocolumn1 - salle auberge.html" class="button">En savoir plus...</a>
 					</section>
 					<section class="3u">
 						<header>
