correction lien d'image

--- a/twocolumn1 - salle auberge.html
+++ b/twocolumn1 - salle auberge.html
@@ -75,7 +75,7 @@
 							<header>
 								<h2>Images sans les lumières allumées</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/salle auberge_noir.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/salle auberge_noir.jpg" alt=""></a>
 							<p>Rendu aprés avoir modéliser la salle d'auberge.</p>
 						</section>
 					</div>
