correction texte article auberge

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<h2>Salle d'auberge japonaise</h2>
 						</header>
 						<a href="twocolumn1 - salle auberge.html" class="image full"><img src="images/reduit_moitier/salle auberge.jpg" alt=""></a>
-						<p>Visite virtuelle, sous forme d'une vidéo, d'un bâtiment de 40 studios modélisés à partir des plans d'architecte.</p>
+						<p>Modélisation d'une salle d'auberge au (premier étage) de style japonaise à partir d'une image tirée d'une vidéo.</p>
 						<a href="twocolumn1 - salle auberge.html" class="button">En savoir plus...</a>
 					</section>
 					<section class="3u">
