ajout nouvelle section et images

--- a/Gallerie.html
+++ b/Gallerie.html
@@ -104,6 +104,19 @@
 						</section>
 					</div>
 					</section>
+					<section>
+					<div class="row">
+						<section class="4u">
+							<a href="twocolumn1 - salle auberge.html" class="image full"><img src="images/reduit_moitier/salle auberge.jpg" alt=""></a>
+						</section>
+						<section class="4u">
+							<a href="#" class="image full"><img src="images/reduit_moitier/" alt=""></a>
+						</section>
+						<section class="4u">
+							<a href="#" class="image full"><img src="images/reduit_moitier/" alt=""></a>
+						</section>
+					</div>
+					</section>
 				</div>
 			</div>
 			<!-- /Welcome -->
