lien casser pour changement de photo

--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -68,7 +68,7 @@
 							<header>
 								<h2>Moi</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/reduit_moitier/ma_photo1_moitier.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/reduit_moitier/" alt=""></a>
 							<p>Naissance : 07/05/1994.</p>
 							<p>En possession du permis B et d'une voiture.</p>
 						</section>
