retour en arrière

--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -87,7 +87,7 @@
 							<header>
 								<h2>Ma présentation</h2>
 							</header>
-							<p>J'ai tout d'abord en 2012 obtenu un Bac <a><strong>Sciences et techniques de l'ingénieur en génie mécanique de fabrication</strong></a> (STI gmf) durant lequel j'ai découvert l'usinage, la lecture de plans, les bases de la mécanique ainsi que la modélisation de pièces 3D qui commençait déjà à m'intéresser beaucoup. Obtenu avec mention "Assez Bien".</p>
+							<p>J'ai tout d'abord en 2012 obtenu un Bac <a>Sciences et techniques de l'ingénieur en génie mécanique de fabrication</a> (STI gmf) durant lequel j'ai découvert l'usinage, la lecture de plans, les bases de la mécanique ainsi que la modélisation de pièces 3D qui commençait déjà à m'intéresser beaucoup. Obtenu avec mention "Assez Bien".</p>
 							<p>C'est ainsi que j'ai décidé d'aller dans la continuité de mon Bac en faisant un <a>BTS de Conception Industrialisée Micro-mécanique</a> (CIM), obtenu en 2014, durant lequel j'ai appris à utiliser des machines programmables grâce aux modélisations réalisées sur ordinateur ainsi que la lecture de plans plus complexes.</p>
 							<p>A la fin de ce BTS, je me suis décidée à me diriger vers une branche plus artistique incluant de la 3D car c'était ce que je préferais. J'ai donc embrayé sur une <a>Licence Professionnelle Images et Sons Numériques</a>. Durant cette licence j'ai appris énormément de techniques dans divers domaines tels que l'architecture, la modélisation à but industriel, la réalisation de films, la réalisation de jeux vidéos, j'ai acquis également des notions de programmation dans divers langages de programmation.</p>
 							<p></p>
