--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
 						<p>Bien entendu, je veux encore développer mes compétences artistiques pour obtenir des résultats de plus en plus proches, soit de la demande d'un commanditaire, soit en corrélation avec mon imaginaire.</p>
 						<p><strong>Visiter la Galerie pour voir mes projets (aussi disponible en bas de chaque page) ou regarder les derniers articles sorti ci-dessous.</strong></p>
 						<a href="Gallerie.html" class="button">Galerie</a>
-						<p>
-						<p>
+						
+					</section>
+					<section>
 						<p>Mon dernier travail était de réaliser une résidence de 40 studios en 3D pour le cabinet d'architecte <strong>OMHOVER REALISATION</strong>. Puis faire une vidéo pour la montrée au clients. Cliquez sur le bouton en dessous de la vidéo pour voir l'article.</p>
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/hjqWYD0K7oQ" frameborder="0" allowfullscreen></iframe>
 						<a href="twocolumn2 - residence.html" class="button">En savoir plus...</a>
