--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
 						
 					</section>
 					<section>
-						<p>Mon dernier travail était de réaliser une résidence de 40 studios en 3D pour le cabinet d'architecte <strong>OMHOVER REALISATION</strong>. Puis faire une vidéo pour la montrée au clients. Cliquez sur le bouton en dessous de la vidéo pour voir l'article.</p>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/hjqWYD0K7oQ" frameborder="0" allowfullscreen></iframe>
+						<p>Mon dernier travail était de réaliser une résidence de 40 studios en 3D pour le cabinet d'architecte <strong>OMHOVER REALISATION</strong>. Puis faire une vidéo pour la montrée au clients. Cliquez sur le bouton ci dessous.</p>
 						<a href="twocolumn2 - residence.html" class="button">En savoir plus...</a>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/hjqWYD0K7oQ" frameborder="0" allowfullscreen></iframe>
+						
 					</section>
 				</div>
 				<div class="divider"></div>
