--- a/index.html
+++ b/index.html
@@ -77,11 +77,14 @@
 				</div>
 				<div class="row">
 					<section>
-									<section>
-						<p>Mon dernier travail était de réaliser une résidence de 40 studios en 3D pour le cabinet d'architecte <strong>OMHOVER REALISATION</strong>. Puis faire une vidéo pour la montrée au clients. Cliquez sur le bouton ci dessous.</p>
-						<a href="twocolumn2 - residence.html" class="button">En savoir plus...</a>
+						<header>
+							<h2>Cabinet d'architecte</h2>
+						</header>
+						<p>Mon dernier travail était de réaliser une résidence de 40 studios en 3D pour le cabinet d'architecte <strong>OMHOVER REALISATION</strong>. La modélisation a ensuite servie à faire une visite virtuelle pour montrer le résultats au clients.</p>
 						<p>Voici la vidéo finis du projet.</p>
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/hjqWYD0K7oQ" frameborder="0" allowfullscreen></iframe>
+						<p>Pour de plus amples informations :</p>
+						<a href="twocolumn2 - residence.html" class="button">En savoir plus...</a>
 						
 					</section>
 				</div>
