--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 						
 					</section>
 				</div>
+				<div class="divider"></div>
+			</div>
 				<div class="row">
 					<section>
 						<header>
