--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						<header>
 							<h2>Cabinet d'architecte</h2>
 						</header>
-						<p>Mon dernier travail était de réaliser une résidence de 40 studios en 3D pour le cabinet d'architecte <strong>OMHOVER REALISATION</strong>. La modélisation a ensuite servie à faire une visite virtuelle pour montrer le résultats au clients.</p>
+						<p>Mon dernier travail était de réaliser une résidence de 40 studios en 3D pour le cabinet d'architecte <strong>OMHOVER REALISATIONS</strong>. La modélisation a ensuite servie à faire une visite virtuelle pour montrer le résultats au clients.</p>
 						<p>Voici la vidéo finis du projet.</p>
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/hjqWYD0K7oQ" frameborder="0" allowfullscreen></iframe>
 						<p>  </p>
